Gave YT link a destination

--- a/STOT_Workspace/about.html
+++ b/STOT_Workspace/about.html
@@ -68,7 +68,7 @@
             <hr id="youtube-line">
         </div>
         <div>
-            <a id="youtube-link">https://www.youtube.com/user/savethemtabbies</a>
+            <a id="youtube-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">https://www.youtube.com/user/savethemtabbies</a>
         </div>
     </div>
     
